force-app/main/default/objects/Health_Questionnaire__c/Health_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Health Questionnaire</label>
    <nameField>
        <displayFormat>QN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>