force-app/main/default/objects/Health_Questionnaire__c/fields/Answer1__c.field-meta.xml
<CustomField>
    <fullName>Answer1__c</fullName>
    <label>Answer1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>