force-app/main/default/objects/Health_Questionnaire__c/fields/Answer2__c.field-meta.xml
<CustomField>
    <fullName>Answer2__c</fullName>
    <label>Answer2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>