force-app/main/default/objects/Health_Questionnaire__c/fields/Answer3__c.field-meta.xml
<CustomField>
    <fullName>Answer3__c</fullName>
    <label>Answer3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>