force-app/main/default/objects/Health_Questionnaire__c/fields/Answer_JSON__c.field-meta.xml
<CustomField>
    <fullName>Answer_JSON__c</fullName>
    <label>Answer JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>