force-app/main/default/objects/Health_Questionnaire__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>Health Questionnaires</relationshipLabel>
    <relationshipName>Health_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>