force-app/main/default/objects/Health_Questionnaire__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Health_Questionnaire__c</referenceTo>
    <relationshipLabel>Health Questionnaires</relationshipLabel>
    <relationshipName>Health_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>