force-app/main/default/objects/Health_Questionnaire__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <label>Question Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>