force-app/main/default/objects/Health_Questionnaire__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Health Questionnaires</relationshipLabel>
    <relationshipName>Health_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>