force-app/main/default/objects/Health_Questionnaire__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Question_Name__c</columns>
    <columns>Code__c</columns>
    <columns>Parent_Question__c</columns>
    <columns>Disbursement__c</columns>
    <columns>Answer_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>